<resources>
    <string name="app_name">Mopus</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="imc">IMC</string>
    <string name="gender">Gender</string>
    <string name="change_password">Change Password</string>
    <string name="action_save">Save</string>
    <string name="water_total">Total ml per day</string>
    <string name="water_cup">Total ml per cup</string>
    <string name="time_wake_up">Time to wake up</string>
    <string name="time_sleep">Time to sleep</string>
    <string name="action_register_menstruation">Register Menstruation</string>
    <string name="mode">Mode</string>
    <string name="walking_mode">Walking</string>
    <string name="running_mode">Running</string>
    <string name="action_open_map">Open Map</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="title_menstrual_cycle">Menstrual Cycle</string>
    <string name="title_hiking_map">Hiking</string>
    <string name="is_professional">Are you an healthcare professional?</string>
    <string name="menstrual_cycle_disable">Menstrual Cycle Disable?</string>
    <string name="title_stats">Stats</string>
    <string name="add_water">Add Cup</string>
    <string name="action_search">Search</string>
    <string name="graph_water_per_day">Water per Day</string>
    <string name="graph_water_per_hour">Water per Hour</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="water_per_day">
        <item>1000ml</item>
        <item>1500ml</item>
        <item>2000ml</item>
        <item>2500ml</item>
        <item>3000ml</item>
        <item>3500ml</item>
        <item>4000ml</item>
    </string-array>

    <string-array name="water_per_cup">
        <item>50ml</item>
        <item>75ml</item>
        <item>100ml</item>
        <item>150ml</item>
        <item>200ml</item>
        <item>250ml</item>
        <item>300ml</item>
        <item>350ml</item>
        <item>400ml</item>
        <item>450ml</item>
        <item>500ml</item>
        <item>550ml</item>
        <item>600ml</item>
        <item>650ml</item>
        <item>700ml</item>
        <item>750ml</item>
        <item>800ml</item>
        <item>850ml</item>
        <item>900ml</item>
        <item>950ml</item>
        <item>1000ml</item>
    </string-array>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="hours">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_professional2">ProfessionalActivity2</string>
    <string name="title_analysis">Analysis</string>

    <!-- QR Code--><string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>

    <!-- Settings related strings. -->
    <string name="pref_screen" translatable="false">ps</string>
    <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
    <string name="pref_category_info" translatable="false">Detection Info</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera" translatable="false">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution" translatable="false">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport" translatable="false">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport" translatable="false">Do not block camera preview drawing on detection</string>

    <!-- Strings for info preference. -->
    <string name="pref_title_info_hide" translatable="false">Hide detection info</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>

    <!-- Strings for object detector enable multiple objects preference. -->
    <string name="pref_title_object_detector_enable_multiple_objects" translatable="false">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>

    <!-- Strings for object detector enable classification preference. -->
    <string name="pref_title_object_detector_enable_classification" translatable="false">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>

    <!-- Strings for segmentation preference. -->
    <string name="pref_title_segmentation_raw_size_mask" translatable="false">Enable raw size mask</string>
    <string name="pref_key_segmentation_raw_size_mask" translatable="false">srsm</string>
    <string name="action_create_qr">Create QR code</string>
    <string name="qr_code">qr_code</string>
    <string name="result_title">User Information</string>
    <string name="weight">Weight: </string>
    <string name="height">Height: </string>
</resources>
