<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_hiking_map"
        android:icon="@drawable/ic_baseline_directions_walk_24"
        android:title="@string/title_hiking_map" />
    <item
        android:id="@+id/navigation_menstrual_cycle"
        android:icon="@drawable/ic_baseline_autorenew_24"
        android:title="@string/title_menstrual_cycle" />
    <item
        android:id="@+id/navigation_stats"
        android:icon="@drawable/ic_baseline_auto_graph_24"
        android:title="@string/title_stats" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />
</menu>