<?xml version="1.0" encoding="utf-8"?>

<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f2ea"
    android:padding="30dp"
    tools:context=".Register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/register_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/birth_date"
                android:inputType="date|datetime"
                android:minHeight="48dp"
                android:visibility="visible"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/register_user"
                android:layout_width="119dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="#ecbeb4"
                android:clickable="true"
                android:gravity="center|center_horizontal|center_vertical"
                android:hint="@string/action_register"
                android:onClick="registerUser"
                android:textColor="#555"
                tools:ignore="TextContrastCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Switch
                android:id="@+id/is_professional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minHeight="48dp"
                android:text="@string/is_professional" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>